syntax = "proto3";

import "google/protobuf/timestamp.proto";

// protoc --go_out=plugins=grpc:. *.proto

package doctorsService;
option go_package = ".;doctorsService";

message Doctor {
  string DoctorID = 1;
  string FirstName = 2;
  string LastName = 3;
  string Speciality = 4;
  google.protobuf.Timestamp StartAt = 5;
  google.protobuf.Timestamp EndAt = 6;
}

message Empty {}

message GetByIDReq { string DoctorID = 1; }

message GetByIDRes { Doctor Doctor = 1; }

service DoctorsService {
  rpc GetByID(GetByIDReq) returns (GetByIDRes) {}
}
