syntax = "proto3";

import "google/protobuf/timestamp.proto";

// protoc --go_out=plugins=grpc:. *.proto

package appointmentsService;
option go_package = ".;appointmentsService";

message Appointment {
  string AppointmentID = 1;
  string DoctorID = 2;
  string PatientID = 3;
  string Reason = 4;
  google.protobuf.Timestamp From = 5;
  google.protobuf.Timestamp To = 6;
}

message Empty {}

message GetByDoctrorIDReq {
  string DoctorID = 1;
  google.protobuf.Timestamp From = 2;
  google.protobuf.Timestamp Till = 3;
}

message GetByDoctorIDRes { repeated Appointment Appointments = 1; }

service AppointmentService {
  rpc GetByDoctorID(GetByDoctrorIDReq) returns (GetByDoctorIDRes) {}
}
